test/types/enum/addEnumUint8.good
addEnumUint8.chpl:5: warning: int(64)
addEnumUint8.chpl:6: warning: int(64)
addEnumUint8.chpl:7: error: unresolved call '+(E, 1: uint(8))'
(prediff deleted module lines)
